<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Project_Elephas</string>
    <string name="payment">PAYMENT</string>
    <string name="include_your_payment_details_here">Include Your Payment Details Here</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="nic">NIC</string>
    <string name="card_no">Card No</string>
    <string name="amount">Amount</string>
    <string name="pay">Pay</string>
    <string name="txtWelcome">Welcome to Elephas Vacations</string>
    <string name="txtUserName">User Name</string>
    <string name="txtPassword">Password</string>
    <string name="txtSignIn">Sign in</string>
    <string name="txtHello">Hello!</string>
    <string name="txtEnterRequirements">Enter Requirements</string>
    <string name="txtViewPackage">View Submitted</string>
    <string name="txtElephasVacations">Elephas Vacations</string>
    <string name="txtManageInfoTours">Manage Information For Tours</string>
    <string name="txtUnconfirmedTours">Unconfirmed Tours</string>
    <string name="txtConfirmedTours">Confirmed Tours</string>
    <string name="txtCompletedTours">Completed Tours</string>
    <string name="txtViewCustomerRequirements">View Customer Requirements</string>
    <string name="txtCustomerRequirements">Customer Requirements</string>
    <string name="txtNamee">Name</string>
    <string name="txtArrivalDate">Arrival Date</string>
    <string name="txtDepartureDate">Departure Date</string>
    <string name="txtNationality">Nationality</string>
    <string name="txtNoOfPeople">No Of People</string>
    <string name="txtNoOfDays">No of Days</string>
    <string name="txtStarCategory">Star Category for Accommodation</string>
    <string name="txtRemarks">Remarks</string>
    <string name="txtSave">Save</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtHotelDetailsManagement">Hotel Details Management</string>
    <string name="txtSightSeeingCostManagement">Sight Seeing Cost Management</string>
    <string name="txtAdditionalCostsManagement">Additional Costs Management</string>
    <string name="txtManageToursText">You can add, change or delete costs and use these data for costing.</string>
    <string name="txtRegister">You can create a new account here.</string>
    <string name="txtReTypePassword">Re-Type Password</string>
    <string name="txtEmail">Email</string>
    <string name="txtRegisterButton">Register</string>
    <string name="txtRegisterForLoginScreen">Don\'t have an account? Click here</string>
    <string name="title_activity_customer_view_list_of_req">CustomerViewListOfReqActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="txtListOfRequirement">List of Requirements</string>
    <string name="app_name_dula">Sight Seeen</string>
    <string name="diver_guide_cost"><![CDATA[Diver & Guide Cost]]></string>
    <string name="additional_costs">Additional Costs</string>
    <string name="transportation_cost">Transportation Cost</string>
    <string name="payament_invoice">Payament Invoice</string>
    <string name="total_cost">Total Cost</string>
    <string name="manage_payments">Manage Payments</string>
    <string name="tours">Tours</string>
    <string name="gross_millege">Gross Mileage</string>
    <string name="extra_mileage">Extra Mileage</string>
    <string name="total_mileage">Total Mileage</string>
    <string name="charge_per_km_lkr">Charge per Km LKR</string>
    <string name="total_cost_in_usd">Total cost in USD</string>
    <string name="driver_guide_costs"><![CDATA[Driver & Guide Costs]]></string>
    <string name="drivers_bata_lkr">Drivers Bata LKR</string>
    <string name="guide_fee_lkr">Guide Fee LKR</string>
    <string name="total_in_lkr">Total in LKR</string>
    <string name="total_in_usd">Total in USD</string>
    <string name="transport_cost">Transport Cost</string>
    <string name="transport_cost_management">Transport Cost Management</string>
    <string name="driver_guide_cost_management"><![CDATA[Driver & Guide cost Management]]></string>
    <string name="driver_guide_cost_management_all"><![CDATA[Driver & Guide Cost Management]]></string>
    <string name="passport_number">Passport Number</string>
    <string name="calculate_save"><![CDATA[Calculate & save]]></string>
    <string name="txtName">Name</string>
    <string name="txtUpdate">Update</string>
    <string name="txtDelete">Delete</string>
    <string name="txtID">Requirement ID:</string>
    <string name="lblName">Name           : </string>
    <string name="lblNationality">"Nationality       : "</string>
    <string name="lblNoOfPeople">"NoOfPeople     : "</string>
    <string name="lblNoOfDays">"NoOfDays         : "</string>
    <string name="txtLoginAdditional">Admins: Use your NIC / Email as login credentials</string>
    <string name="txtLoginHintForUserOrAdminID">Passport / Email</string>
    <string name="txtCustomerReqUpdateDelete">Enter your requirements below</string>
    <string name="txtPassPortDisplay">Passport No :</string>
    <string name="txtNationalityDisplay">Nationality :</string>
    <string name="txtSampleDataForRequirementID">Sample Requirement ID 1</string>
    <string name="txtSampleDataForPassPort">SLXXX1</string>
    <string name="txtSampleDataForNationality">Indian</string>
    <string name="add_new_cost_packages">Add New Cost Packages</string>
    <string name="pname1">Package Name</string>
    <string name="dis">Package Description</string>
    <string name="pprice">Package Price</string>
    <string name="anewpackage">Add New Cost Package</string>
    <string name="updatebut3">Update</string>
    <string name="deletepackages">Delete</string>
    <string name="newvewall">View All Packages</string>
    <string name="etailscrud">DEtails for new admin about how to insert,delete and update details</string>
    <string name="packagenonew">Package No(Enter Integer No)</string>
    <string name="package1">B\'Day Party Packeges</string>
    <string name="pac2">Wedding Packages</string>
    <string name="pac3">Dinner Packages</string>
    <string name="pac5">Medecine Packages</string>
</resources>