<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_New_Cost">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/add_new_cost_packages"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/details_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorgreen"
            android:text="@string/etailscrud" />

        <EditText
            android:id="@+id/pno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/packagenonew"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/pname1" />

        <EditText
            android:id="@+id/pDis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:gravity="start|top"
            android:hint="@string/dis"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/pPric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/pprice" />

        <Button
            android:id="@+id/selectAll_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorgreen"
            android:text="@string/newvewall" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorgreen"
            android:text="@string/anewpackage" />

        <Button
            android:id="@+id/update_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorgreen"
            android:text="@string/updatebut3" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorgreen"
            android:text="@string/deletepackages" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>