<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_manage_cost">

    <ImageView
        android:layout_width="95dp"
        android:layout_height="82dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/elephas_icon"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="395dp"
            android:layout_height="97dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/txtElephasVacations"
            android:textSize="24sp"
            app:fontFamily="serif"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="390dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txtHello"
            android:textSize="18sp"
            app:fontFamily="serif"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/transportBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/transport_cost"
            />


        <Button
            android:id="@+id/driverBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/driver_guide_costs"
            />

        <Button
            android:id="@+id/transport_manage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/transport_cost_management"
            />


        <Button
            android:id="@+id/driverManageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/driver_guide_cost_management"
            />

        <Button
            android:id="@+id/manage_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/manage_payments"
            />

    </LinearLayout>

</RelativeLayout>